add openapi and initial api
