# app/Models/Alimento.php
@@ -1,0 +1,17 @@
+<?php
+
+namespace App\Models;
+
+use Illuminate\Database\Eloquent\Factories\HasFactory;
+use Illuminate\Database\Eloquent\Model;
+
+class Alimento extends Model
+{
+    use HasFactory;
+    protected $fillable = [
+        'nome',
+        'quantidade_estoque',
+        'valor',
+        'composicao'
+    ];
+}
